creating false post and displaying it in some component +  button display comments + like formating

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
 .App-link {
   color: #61dafb;
 }
+
+.Article {
+  width: 75%;
+  margin: 2.5%;
+  padding: 2px;
+  display: flex;
+  flex-direction: row;
+}
