--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 }
 
 .App-header svg{
-  height: 10px;
+  height: 15px;
 }
 
 .App-header h3 svg{
@@ -44,35 +44,82 @@
   color: rgb(21, 21, 221);
 }
 
+.SearchBar input{
+  border: solid 1px rgb(128, 128, 128);
+  background-image: url(./ressources/icons/searchIcon.svg);
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 5% 50%;
+  padding: 10px 150px 10px 55px;
+  align-content: center;
+  color: #6d6d6d;
+}
 
 .App-link {
   color: #61dafb;
 }
 
+.Body{
+  margin-left: 25%;
+}
+
 
 .Article {
   background-color: white;
-  width: 75%;
+  justify-self: center;
+  width: 60%;
   margin: 20px;
-  padding: 10px;
+  padding: -5px;
   display: flex;
   flex-direction: row;
+  border: solid 0.5px rgba(109, 109, 109, 0.5);
+  border-radius: 5px;
+}
+
+.Article:hover{
+  border: solid 0.5px rgba(109, 109, 109);
 }
 
 .ArticleLikes {
-  width: 5%;
-  margin: 10px;
+  font-size: 12px;
+  width: 50px;
+  margin: 10px 0px;
 }
 
 .SubArticle{
   width: 80%;
 }
 
+.ArticleInfo{
+  text-align: start;
+  font-size: 12px;
+  color: rgb(109, 109, 109);
+  margin-bottom: 0px;
+}
+
+.Article a{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.Article a:hover{
+  text-decoration: underline;
+}
+
+.ArticleInfo span a{
+  color:rgb(109, 109, 109)
+}
+
+.btn-groupe{
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 5px;
+  font-size: 12px;
+  
+}
+
 .btn-groupe button{
-  display: inline-block;
-  float: left;
-  margin: 5px;
-  font-size: 15px;
   text-align: center;
   border: none;
   color: rgb(109, 109, 109);
@@ -93,4 +140,20 @@
 .SubArticle img{
   width:fit-content;
   max-width: 100%;
+}
+
+.Comment{
+  padding-left: 2%;
+  text-align: start;
+  margin-bottom: 5px;
+}
+
+.Comment p{
+  margin: 7px;
+}
+
+.Footer{
+  margin: 0px;
+  padding: 25px;
+  background-color: #dae0e6;
 }
