--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@
 .Article {
   background-color: white;
   justify-self: center;
-  width: 60%;
+  min-width: 60%;
+  max-width: 60%;
   margin: 20px 38%;
   padding: -5px;
   display: flex;
@@ -193,10 +194,70 @@
 .Categories{
   text-align: center;
   margin: 20px;
-  min-width: 30%;
-  height: 500px;
+  min-width: 27%;
+  max-width: 27%;
   background-color: white;
+  padding: -5px;
+  height: fit-content;
+}
 
+.btn-Categories{
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  justify-items: center;
+  flex-direction: row wrap;
+  margin: 10px 10px;
+  font-size: 12px;
+}
+
+.btn-Categories svg{
+  pointer-events: none;
+}
+
+.btn-Categories button{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 95px;
+  text-align: center;
+  border: none;
+  color: #6d6d6d;
+  background-color: white;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.btn-Categories button:hover {
+  background-color: rgb(184, 184, 184);
+}
+
+.btn-Categories button:active {
+  background-color: rgba(184, 184, 184, 0.4);
+}
+
+.Subreddit-Categories li{
+  list-style: none;
+}
+
+.Subreddit-Categories button{
+  color: #6d6d6d;
+  background-color: white;
+  cursor: pointer;
+  text-align:left;
+  padding: 5px 10px;
+  margin: 20px;
+  border: 0.2px solid rgb(184, 184, 184);
+  border-radius: 10% / 50%;
+  font-size: 18px;
+}
+
+.Subreddit-Categories button:hover{
+  background-color: rgb(184, 184, 184);
+}
+
+.Subreddit-Categories button:active{
+  background-color: rgba(184, 184, 184, 0.4);
 }
 
 .Footer{
